[package]
name = "tokio_timeline"
version.workspace = true
edition = "2021"
publish = false
autobenches = false

[[bin]]
name = "tokio_timeline"
path = "src/main.rs"
doc = false
bench = false

[dependencies]
datadog-opentelemetry = { path = "../..", features = ["tokio-timeline"] }
dial9-tokio-telemetry = "0.2"
tokio = { version = "1", features = ["full", "tracing"] }
