# Copyright 2025-Present Datadog, Inc. https://www.datadoghq.com/
# SPDX-License-Identifier: Apache-2.0

[package]
name = "datadog-aws"
description = "Datadog instrumentation for AWS SDK for Rust. Currently supports SQS, SNS, and EventBridge."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
aws-sdk-eventbridge = "1.104.0"
aws-sdk-sns = "1.98.0"
aws-sdk-sqs = "1.97.0"
aws-smithy-runtime-api = { version = "1.11", features = ["client"] }
aws-smithy-types = "1.4"
aws-types = "1.3"
serde_json = { workspace = true }
opentelemetry = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
aws-credential-types = { version = "1", features = ["test-util"] }
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
opentelemetry_sdk = { workspace = true, features = ["trace", "testing"] }
serial_test = "3"
tokio = { workspace = true, features = ["rt", "macros", "net", "io-util"] }
