# Copyright 2025-Present Datadog, Inc. https://www.datadoghq.com/
# SPDX-License-Identifier: Apache-2.0

[package]
name = "datadog-aws"
description = "Datadog instrumentation for AWS SDK for Rust. Currently supports SQS, SNS, and EventBridge."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
aws-sdk-eventbridge = "1.102"
aws-sdk-sns = "1.96"
aws-sdk-sqs = "1.93"
aws-smithy-runtime-api = { version = "1.11", features = ["client"] }
aws-smithy-types = "1.4"
serde_json = { workspace = true }
opentelemetry = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
