[package]
name = "datadog-lambda-rs"
rust-version = "1.85.0"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
description = "Datadog Lambda tracing for Rust"

[dependencies]
lambda_runtime = "0.13"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }

[dev-dependencies]
aws-config = "1.6"
aws-sdk-eventbridge = "1.102"
aws-sdk-sns = "1.96"
aws-sdk-sqs = "1.93"
datadog-aws-sdk = { version = "0.2", path = "../aws-sdk-rust" }
datadog-opentelemetry = { version = "0.2", path = "../../../datadog-opentelemetry" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tokio-test = "0.4"

[[example]]
name = "sqs-producer"
path = "examples/sqs/rust-producer/main.rs"

[[example]]
name = "sqs-consumer"
path = "examples/sqs/rust-consumer/main.rs"

[[example]]
name = "sns-producer"
path = "examples/sns/rust-producer/main.rs"

[[example]]
name = "sns-consumer"
path = "examples/sns/rust-consumer/main.rs"

[[example]]
name = "eventbridge-producer"
path = "examples/eventbridge/rust-producer/main.rs"

[[example]]
name = "eventbridge-consumer"
path = "examples/eventbridge/rust-consumer/main.rs"
